fix makefile and app proto
